--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
   <!-- Favicon and Icons -->
   <link rel="canonical" href="https://fkinnovations.github.io/">
-  <link rel="icon" href="/favicon.ico" sizes="any">
+  <link rel="icon" href="favicon.ico" sizes="any">
   <link rel="icon" href="/icon.svg" type="image/svg+xml">
   <link rel="apple-touch-icon" href="icon.png">
 
