Revamp site content, contact form, and add bedankt page
Major update to index.html with improved copy, new service descriptions, and a reworked contact form using Web3Forms and redirect to a new bedankt.html thank-you page. Added dynamic text rotation and footer year update in app.js. Enhanced contact form styling in style.css. Introduced bedankt.html for post-submission confirmation.

--- a/index.html
+++ b/index.html
@@ -4,12 +4,11 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>FK Innovations | Websites en Unity Apps op Maat</title>
+  <title>FK Innovations | Freelance Webdeveloper & Unity Expert</title>
   <link rel="stylesheet" href="css/style.css">
-  <meta name="description" content="FK Innovations bouwt betaalbare websites en Unity (2D/3D/VR) apps voor kleine bedrijven, makers en persoonlijke merken. Vraag een vrijblijvende offerte aan.">
-  <meta name="keywords" content="website laten maken, unity ontwikkelaar, vr applicatie, 2d game, 3d game, webdesign, betaalbare website, FK Innovations">
+  <meta name="description" content="FK Innovations bouwt betaalbare websites en Unity (2D/3D/VR) apps voor kleine bedrijven en makers. Professioneel webdesign en game development op maat.">
+  <meta name="keywords" content="website laten maken, unity ontwikkelaar, vr applicatie, freelance developer, webdesign zzp, interactieve media">
 
-  <!-- Open Graph / Facebook -->
   <meta property="og:title" content="FK Innovations | Websites en Unity Apps op Maat">
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://fkinnovations.github.io/">
@@ -17,7 +16,6 @@
   <meta property="og:image:alt" content="Voorbeeld van een moderne website en app layout door FK Innovations">
   <meta property="og:description" content="FK Innovations bouwt betaalbare websites en Unity (2D/3D/VR) apps voor kleine bedrijven, makers en persoonlijke merken.">
 
-  <!-- Favicon and Icons -->
   <link rel="canonical" href="https://fkinnovations.github.io/">
   <link rel="icon" href="favicon.ico" sizes="any">
   <link rel="icon" href="/icon.svg" type="image/svg+xml">
@@ -26,7 +24,6 @@
   <link rel="manifest" href="site.webmanifest">
   <meta name="theme-color" content="#0f172a">
 
-  <!-- JSON-LD Structured Data -->
   <script type="application/ld+json">
     {
       "@context": "https://schema.org",
@@ -73,12 +70,9 @@
     <div class="logo">FK<span>Innovations</span></div>
     <nav class="main-nav">
       <a href="#services">Diensten</a>
-      <a href="#process">Hoe het werkt</a>
-      <a href="#work">Voorbeelden</a>
-      <a href="#unity">Unity Apps</a>
-      <a href="#contact" class="btn btn-small">Vraag een site aan</a>
+      <a href="#process">Werkwijze</a> <a href="#work">Portfolio</a>   <a href="#unity">Unity</a>
+      <a href="#contact" class="btn btn-small">Offerte aanvragen</a>
     </nav>
-
   </div>
 </header>
 
@@ -86,26 +80,26 @@
   <section class="hero" id="top">
     <div class="container hero-inner">
       <div class="hero-copy">
-        <h1>Website nodig?<br>Ik bouw hem voor je.</h1>
-        <h2 class="hero-subtitle">Op maat gemaakte, moderne websites voor kleine bedrijven, makers en persoonlijke merken — zonder het prijskaartje van een bureau.</h2>
+        <h1>Websites & Unity Apps<br>laten maken?</h1>
+        <h2 class="hero-subtitle">Ik ben jouw freelance partner voor maatwerk websites en interactieve 3D ervaringen. Moderne technologie zonder de bureau-prijzen.</h2>
         <div class="hero-cta">
-          <a href="#contact" class="btn btn-primary">Vraag je website aan</a>
-          <a href="#work" class="btn btn-ghost">Bekijk voorbeeldlayouts</a>
+          <a href="#contact" class="btn btn-primary">Start je project</a>
+          <a href="#work" class="btn btn-ghost">Bekijk mijn werk</a>
         </div>
         <ul class="hero-list">
-          <li>Responsive design (werkt op telefoon, tablet en desktop)</li>
-          <li>Snel ladend, schone code en SEO-vriendelijke structuur</li>
-          <li>Simpele prijzen, geen verwarrende technische taal</li>
+          <li>100% Responsive & SEO-geoptimaliseerd</li>
+          <li>Expert in Webdesign én Game Development</li>
+          <li>Direct contact met de ontwikkelaar</li>
         </ul>
       </div>
       <div class="hero-side">
         <div class="hero-card">
-          <p class="hero-card-title">Vertel me wat je nodig hebt.</p>
-          <p class="hero-card-text">Je beschrijft je idee in gewone taal. Ik regel domein, layout en technische setup.</p>
+          <p class="hero-card-title">Jouw idee, mijn code.</p>
+          <p class="hero-card-text">Of het nu een strakke bedrijfswebsite is of een complexe VR-training, ik regel de technische realisatie.</p>
           <ul class="hero-card-steps">
-            <li><span>1.</span> Deel je doelen</li>
-            <li><span>2.</span> Keur het ontwerp goed</li>
-            <li><span>3.</span> Launch je nieuwe site</li>
+            <li><span>1.</span> Kennismaken</li>
+            <li><span>2.</span> Ontwikkelen</li>
+            <li><span>3.</span> Livegang</li>
           </ul>
         </div>
       </div>
@@ -115,35 +109,35 @@
   <section id="services" class="section section-light">
     <div class="container">
       <header class="section-header">
-        <h2>Wat ik voor je kan bouwen</h2>
-        <p>Kies het type site dat het beste bij je past. Alle opties bevatten responsive design en basis on-page SEO.</p>
+        <h2>Waarmee kan ik je helpen?</h2>
+        <p>Digitale oplossingen die jouw bedrijf of idee laten groeien.</p>
       </header>
       <div class="cards-grid">
         <article class="card">
-          <h3>Simpele Landingspagina</h3>
-          <p>Perfect als je snel online wilt zijn met je aanbod, contactgegevens en een strak ontwerp.</p>
+          <h3>Online Zichtbaarheid</h3>
+          <p>Wil je een product lanceren of leads verzamelen? Ik bouw snelle landingspagina's die bezoekers omzetten in klanten.</p>
           <ul>
-            <li>1 lange scrollpagina</li>
-            <li>Contactformulier of call-to-action knop</li>
-            <li>Basis analytics setup (optioneel)</li>
+            <li>Hoge conversie focus</li>
+            <li>Google Analytics integratie</li>
+            <li>Razendsnelle laadtijden</li>
           </ul>
         </article>
         <article class="card">
-          <h3>Kleine Bedrijfswebsite</h3>
-          <p>Voor lokale bedrijven die een paar pagina's nodig hebben: home, diensten, over ons en contact.</p>
+          <h3>Professionele Identiteit</h3>
+          <p>Een complete bedrijfswebsite die vertrouwen uitstraalt. Ideaal voor het MKB en freelancers die een stap verder willen.</p>
           <ul>
-            <li>Tot 5 pagina's</li>
-            <li>Mobiel-vriendelijke layout</li>
-            <li>Duidelijke navigatie en calls to action</li>
+            <li>Vindbaar in Google (SEO)</li>
+            <li>Makkelijk uitbreidbaar</li>
+            <li>Inclusief hosting advies</li>
           </ul>
         </article>
         <article class="card">
-          <h3>Portfolio of Persoonlijk Merk</h3>
-          <p>Toon je werk, projecten of content met een layout op maat van je stijl en publiek.</p>
+          <h3>Interactieve Ervaringen</h3>
+          <p>Wil je écht opvallen? Kies voor een interactief portfolio of een 3D-beleving op het web waar je concurrenten jaloers op zijn.</p>
           <ul>
-            <li>Project / gallerij sectie</li>
-            <li>Over + contactpagina's</li>
-            <li>Gemakkelijk later uit te breiden</li>
+            <li>Unieke animaties</li>
+            <li>Portfolio gallerijen</li>
+            <li>Verhaalgerichte layouts</li>
           </ul>
         </article>
       </div>
@@ -153,21 +147,21 @@
   <section id="process" class="section">
     <div class="container">
       <header class="section-header">
-        <h2>Hoe het werkt</h2>
-        <p>Geen jargon, geen mysterie. Gewoon een duidelijk 3-stappen proces.</p>
+        <h2>Zo werken we samen</h2>
+        <p>Transparant, persoonlijk en zonder technisch jargon.</p>
       </header>
       <ol class="steps">
         <li>
-          <h3>1. Vertel me over je idee</h3>
-          <p>Je vult het korte formulier hieronder in of stuurt een kort bericht met wat je nodig hebt en eventuele voorbeelden die je leuk vindt.</p>
+          <h3>1. Het Gesprek</h3>
+          <p>Jij vertelt wat je nodig hebt. Ik luister, stel vragen en denk mee over de haalbaarheid en de beste technische aanpak.</p>
         </li>
         <li>
-          <h3>2. Ik ontwerp & bouw je site</h3>
-          <p>Ik maak een eerste versie op basis van je content en stijl. Je bekijkt het en vraagt wijzigingen aan.</p>
+          <h3>2. De Bouwfase</h3>
+          <p>Ik ga aan de slag met het ontwerp en de code. Je krijgt tussentijds updates zodat je precies ziet hoe je project tot leven komt.</p>
         </li>
         <li>
-          <h3>3. Lancering & overdracht</h3>
-          <p>Als je tevreden bent, zetten we je site live op je domein en laat ik je zien hoe je de basics kunt updaten.</p>
+          <h3>3. Oplevering & Support</h3>
+          <p>We zetten alles live. Ik leg je uit hoe alles werkt en blijf beschikbaar voor vragen of toekomstige uitbreidingen.</p>
         </li>
       </ol>
     </div>
@@ -176,65 +170,67 @@
   <section id="work" class="section section-light">
     <div class="container">
       <header class="section-header">
-        <h2>Voorbeeldlayouts</h2>
-        <p>Hier zijn voorbeeldstructuren die ik kan aanpassen aan jouw merk en content.</p>
+        <h2>Kies je stijl</h2>
+        <p>Bekijk deze voorbeeldstructuren. Elk design wordt volledig aangepast aan jouw huisstijl.</p>
       </header>
       <div class="layouts-grid">
         <a href="layouts/business.html" class="layout-box">
-          <img src="img/layout-business.jpg" alt="Voorbeeld van een strakke bedrijfslayout">
-          <h3>Strakke bedrijfslayout</h3>
-          <p>Hero, diensten, getuigenissen, contact.</p>
+          <img src="img/layout-business.jpg" alt="Zakelijke website layout template" loading="lazy">
+          <h3>De 'Corporate' Look</h3>
+          <p>Betrouwbaar, strak en overzichtelijk. Perfect voor diensten.</p>
         </a>
         <a href="layouts/portfolio.html" class="layout-box">
-          <img src="img/layout-portfolio.jpg" alt="Voorbeeld van een portfolio layout voor een maker">
-          <h3>Maker / portfolio layout</h3>
-          <p>Galerij, uitgelichte projecten, over, contact.</p>
+          <img src="img/layout-portfolio.jpg" alt="Creatieve portfolio layout template" loading="lazy">
+          <h3>De 'Creative' Look</h3>
+          <p>Visueel ingesteld met veel ruimte voor afbeeldingen en werk.</p>
         </a>
         <a href="layouts/onepage.html" class="layout-box">
-          <img src="img/layout-onepage.jpg" alt="Voorbeeld van een simpele one-page layout">
-          <h3>Simpele one-page layout</h3>
-          <p>Hero, over, aanbod, veelgestelde vragen, contact.</p>
+          <img src="img/layout-onepage.jpg" alt="Minimalistische one-page website template" loading="lazy">
+          <h3>De 'Minimalist' Look</h3>
+          <p>Alles op één pagina. Modern, snel en to-the-point.</p>
         </a>
       </div>
     </div>
   </section>
+
   <section id="unity" class="section">
     <div class="container">
       <header class="section-header">
-        <h2>Unity Apps & Games</h2>
-        <p>Naast websites ontwikkel ik ook interactieve applicaties en games met Unity.</p>
+        <h2>Unity Development</h2>
+        <p>Als gecertificeerd Unity ontwikkelaar bouw ik meer dan alleen websites.</p>
       </header>
       <div class="cards-grid">
         <article class="card">
-          <h3>2D Games & Apps</h3>
-          <p>Van educatieve apps tot casual games — 2D projecten voor mobiel, desktop of web.</p>
+          <h3>Serious Games & Apps</h3>
+          <p>Educatieve applicaties of gamified marketing tools die werken op zowel mobiel (iOS/Android) als desktop.</p>
           <ul>
-            <li>Mobiele games (iOS & Android)</li>
-            <li>Interactieve leerapplicaties</li>
-            <li>WebGL exports voor browsers</li>
+            <li>Cross-platform development</li>
+            <li>Touch controls & UI</li>
+            <li>App Store begeleiding</li>
           </ul>
         </article>
         <article class="card">
-          <h3>3D Projecten</h3>
-          <p>Immersieve 3D-ervaringen, simulaties en visualisaties voor verschillende platformen.</p>
+          <h3>3D Visualisaties</h3>
+          <p>Interactieve productdemo's of vastgoed walkthroughs. Laat klanten je product ervaren voordat ze kopen.</p>
           <ul>
-            <li>Product visualisatie tools</li>
-            <li>Architectuur walkthroughs</li>
-            <li>3D games en simulaties</li>
+            <li>High-end graphics</li>
+            <li>Real-time rendering</li>
+            <li>WebGL (draait in browser)</li>
           </ul>
         </article>
         <article class="card">
-          <h3>VR Experiences</h3>
-          <p>Virtual reality applicaties voor training, entertainment of presentaties.</p>
+          <h3>Virtual Reality (VR)</h3>
+          <p>Dompel je gebruikers onder in een andere wereld. Ideaal voor veilige trainingen of indrukwekkende presentaties.</p>
           <ul>
-            <li>VR training modules</li>
-            <li>Immersieve presentaties</li>
-            <li>Virtual showrooms</li>
+            <li>Oculus / Meta Quest</li>
+            <li>Trainingssimulaties</li>
+            <li>360 graden video</li>
           </ul>
         </article>
       </div>
     </div>
   </section>
+
   <section id="faq" class="section section-light">
     <div class="container">
       <header class="section-header">
@@ -242,21 +238,21 @@
       </header>
       <div class="faq-list">
         <article itemscope itemprop="mainEntity" itemtype="https://schema.org/Question">
-          <h3 itemprop="name">Hoeveel kost een website of Unity app?</h3>
+          <h3 itemprop="name">Wat kost een website laten maken?</h3>
           <div itemscope itemprop="acceptedAnswer" itemtype="https://schema.org/Answer">
-            <p itemprop="text">De kosten variëren afhankelijk van de complexiteit en functionaliteit. Neem contact op voor een vrijblijvende offerte op maat.</p>
+            <p itemprop="text">Dit hangt af van je wensen. Een simpele 'one-page' site is voordeliger dan een complexe webshop of Unity game. Neem contact op voor een prijsindicatie.</p>
           </div>
         </article>
         <article itemscope itemprop="mainEntity" itemtype="https://schema.org/Question">
-          <h3 itemprop="name">Hoe lang duurt het om een project op te leveren?</h3>
+          <h3 itemprop="name">Doe je ook onderhoud en updates?</h3>
           <div itemscope itemprop="acceptedAnswer" itemtype="https://schema.org/Answer">
-            <p itemprop="text">Een simpele landingspagina kan binnen 1-2 weken klaar zijn. Grotere websites of Unity projecten nemen 4-8 weken in beslag, afhankelijk van de scope.</p>
+            <p itemprop="text">Zeker. Na livegang laat ik je niet zwemmen. We kunnen afspraken maken over periodiek onderhoud of updates.</p>
           </div>
         </article>
         <article itemscope itemprop="mainEntity" itemtype="https://schema.org/Question">
-          <h3 itemprop="name">Kan ik zelf updates doen aan mijn website?</h3>
+          <h3 itemprop="name">Werk je voor klanten door heel Nederland?</h3>
           <div itemscope itemprop="acceptedAnswer" itemtype="https://schema.org/Answer">
-            <p itemprop="text">Ja, ik zorg voor een gebruiksvriendelijke oplossing en geef je uitleg over hoe je eenvoudige updates kunt doorvoeren.</p>
+            <p itemprop="text">Ja, omdat we digitaal werken kan ik klanten uit heel Nederland en België bedienen, van Amsterdam tot Brussel.</p>
           </div>
         </article>
       </div>
@@ -267,43 +263,42 @@
     <div class="container contact-grid">
       <div>
         <header class="section-header section-header-invert">
-          <h2>Heb je een project in gedachten?</h2>
-          <p>Deel zoveel of zo weinig details als je wilt. Ik reageer met ideeën en een duidelijke volgende stap.</p>
+          <h2>Start jouw project</h2>
+          <p>Klaar om je ideeën werkelijkheid te laten worden? Stuur me een berichtje.</p>
         </header>
         <ul class="contact-notes">
-          <li>Beschrijf je bedrijf of idee</li>
-          <li>Noem eventuele sites of apps waarvan je het uiterlijk leuk vindt</li>
-          <li>Vermeld je voorkeursmanier om contact op te nemen</li>
+          <li>Vrijblijvend advies</li>
+          <li>Direct antwoord van de ontwikkelaar</li>
+          <li>Geen technische kennis vereist</li>
         </ul>
       </div>
-      <form class="contact-form" action="https://formsubmit.co/your-email@example.com" method="POST">
-        <!-- FormSubmit configuration -->
-        <input type="hidden" name="_subject" value="Nieuwe projectaanvraag">
-        <input type="hidden" name="_captcha" value="false">
-        <input type="hidden" name="_template" value="table">
+      <form class="contact-form" action="https://api.web3forms.com/submit" method="POST">
+
+        <input type="hidden" name="access_key" value="c1300588-5c67-4aac-9b06-760c8e1c2f8d">
+
+        <input type="hidden" name="subject" value="Nieuwe aanvraag via Portfolio Site">
+        <input type="hidden" name="redirect" value="https://fkinnovations.github.io/bedankt.html">
+
+        <input type="checkbox" name="botcheck" class="hidden" style="display: none;">
 
         <label for="name">Naam</label>
-        <input type="text" id="name" name="name" required>
+        <input type="text" id="name" name="name" required placeholder="Je naam">
 
-        <label for="email">E-mail</label>
-        <input type="email" id="email" name="email" required>
+        <label for="email">E-mailadres</label>
+        <input type="email" id="email" name="email" required placeholder="je@email.nl">
 
-        <label for="type">Wat voor project heb je nodig?</label>
+        <label for="type">Waar heb je interesse in?</label>
         <select id="type" name="type">
-          <option value="landing">Simpele landingspagina</option>
-          <option value="business">Kleine bedrijfswebsite</option>
-          <option value="portfolio">Portfolio / persoonlijk merk</option>
-          <option value="unity2d">Unity 2D App/Game</option>
-          <option value="unity3d">Unity 3D Project</option>
-          <option value="unityvr">Unity VR Experience</option>
-          <option value="other">Iets anders</option>
+          <option value="landing">Nieuwe Website</option>
+          <option value="unity">Unity App / Game</option>
+          <option value="consulting">Advies / Anders</option>
         </select>
 
-        <label for="message">Vertel me over je idee</label>
-        <textarea id="message" name="message" rows="5" placeholder="Schrijf een paar zinnen over wat je wilt dat je project doet."></textarea>
+        <label for="message">Bericht</label>
+        <textarea id="message" name="message" rows="5" required placeholder="Vertel kort over je idee..."></textarea>
 
-        <button type="submit" class="btn btn-primary btn-block">Verzend aanvraag</button>
-        <p class="form-note">Na verzending word je doorgestuurd naar een bevestigingspagina.</p>
+        <button type="submit" class="btn btn-primary btn-block">Verstuur bericht</button>
+
       </form>
     </div>
   </section>
@@ -312,10 +307,9 @@
 
 <footer class="site-footer">
   <div class="container footer-inner">
-    <p>&copy; <span id="year"></span> FK Innovations. Website nodig? <a href="#contact">Laten we praten.</a></p>
+    <p>&copy; <span id="year"></span> FK Innovations | Webdesign & App Development in Nederland.</p>
   </div>
 </footer>
 
 </body>
-
 </html>
