Add Google Analytics tracking to HTML pages
Inserted Google Analytics (gtag.js) tracking code into bedankt.html, index.html, layouts/business.html, and layouts/portofolio.html to enable site analytics across key pages.

--- a/index.html
+++ b/index.html
@@ -2,8 +2,18 @@
 <html class="no-js" lang="nl">
 
 <head>
+
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-Z5BP3P4YHP"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-Z5BP3P4YHP');
+  </script>
   <title>FK Innovations | Freelance Webdeveloper & Unity Expert</title>
   <link rel="stylesheet" href="css/style.css">
   <meta name="description" content="FK Innovations bouwt betaalbare websites en Unity (2D/3D/VR) apps voor kleine bedrijven en makers. Professioneel webdesign en game development op maat.">
