--- a/bedankt.html
+++ b/bedankt.html
@@ -3,6 +3,14 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-Z5BP3P4YHP"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-Z5BP3P4YHP');
+  </script>
   <title>Bedankt voor je bericht! | FK Innovations</title>
   <link rel="stylesheet" href="css/style.css">
   <style>
