--- a/index.html
+++ b/index.html
@@ -2,20 +2,21 @@
 <html class="no-js" lang="nl">
 
 <head>
-
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <!-- Google tag (gtag.js) -->
+
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-Z5BP3P4YHP"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
-
     gtag('config', 'G-Z5BP3P4YHP');
   </script>
+
+  <link rel="preload" href="css/style.css" as="style">
+
   <title>FK Innovations | Freelance Webdeveloper & Unity Expert</title>
-  <link rel="stylesheet" href="css/style.css">
+
   <meta name="description" content="FK Innovations bouwt betaalbare websites en Unity (2D/3D/VR) apps voor kleine bedrijven en makers. Professioneel webdesign en game development op maat.">
   <meta name="keywords" content="website laten maken, unity ontwikkelaar, vr applicatie, freelance developer, webdesign zzp, interactieve media">
 
@@ -23,16 +24,45 @@
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://fkinnovations.github.io/">
   <meta property="og:image" content="img/og-image.png">
-  <meta property="og:image:alt" content="Voorbeeld van een moderne website en app layout door FK Innovations">
   <meta property="og:description" content="FK Innovations bouwt betaalbare websites en Unity (2D/3D/VR) apps voor kleine bedrijven, makers en persoonlijke merken.">
 
   <link rel="canonical" href="https://fkinnovations.github.io/">
   <link rel="icon" href="favicon.ico" sizes="any">
   <link rel="icon" href="/icon.svg" type="image/svg+xml">
   <link rel="apple-touch-icon" href="icon.png">
-
   <link rel="manifest" href="site.webmanifest">
   <meta name="theme-color" content="#0f172a">
+
+  <style>
+    /* Basis instellingen */
+    :root { --bg: #020617; --accent: #38bdf8; --text: #0f172a; --white: #ffffff; }
+    body { margin: 0; font-family: system-ui, -apple-system, sans-serif; color: #0f172a; background-color: #050505; overflow-x: hidden; }
+
+    /* Jouw Balatro Achtergrond (zodat het scherm niet wit blijft) */
+    .balatro-bg {
+      position: fixed; top: 0; left: 0; width: 100vw; height: 100vh; z-index: -2;
+      background: radial-gradient(circle at 50% 50%, rgba(56, 189, 248, 0.4), transparent 50%), radial-gradient(circle at 0% 0%, rgba(30, 27, 75, 1), transparent 50%), conic-gradient(from 0deg, #020617, #0f172a, #1e1b4b, #38bdf8, #020617);
+      background-size: 200% 200%; filter: blur(60px); opacity: 0.8;
+    }
+    .crt-overlay { position: fixed; top: 0; left: 0; width: 100vw; height: 100vh; z-index: -1; background: transparent; box-shadow: inset 0 0 150px rgba(0,0,0,0.9); }
+
+    /* Header en Hero layout */
+    .container { width: min(1120px, 100% - 2.5rem); margin: 0 auto; }
+    .site-header { position: sticky; top: 0; z-index: 20; padding: 1rem 0; }
+    .header-inner { display: flex; justify-content: space-between; align-items: center; }
+    .logo { color: #fff; font-weight: 700; text-transform: uppercase; font-size: 1.1rem; }
+    .logo span { color: #38bdf8; }
+    .hero { padding: 4.5rem 0 4rem; color: #fff; }
+    .hero-inner { display: grid; grid-template-columns: minmax(0, 3.5fr) minmax(0, 2.5fr); gap: 3.5rem; align-items: center; }
+    h1 { font-size: 3rem; line-height: 1.1; margin-bottom: 1rem; }
+
+    /* Mobiele fallback */
+    @media (max-width: 800px) { .hero-inner { grid-template-columns: 1fr; } }
+  </style>
+
+  <link rel="stylesheet" href="css/style.css" media="print" onload="this.media='all'">
+
+  <noscript><link rel="stylesheet" href="css/style.css"></noscript>
 
   <script type="application/ld+json">
     {
@@ -47,26 +77,10 @@
         "url": "https://fkinnovations.github.io/#contact"
       },
       "service": [
-        {
-          "@type": "Service",
-          "name": "Website Ontwikkeling",
-          "description": "Op maat gemaakte, moderne websites voor kleine bedrijven, makers en persoonlijke merken."
-        },
-        {
-          "@type": "Service",
-          "name": "Unity 2D App/Game Ontwikkeling",
-          "description": "2D projecten voor mobiel, desktop of web, van educatieve apps tot casual games."
-        },
-        {
-          "@type": "Service",
-          "name": "Unity 3D Project Ontwikkeling",
-          "description": "Immersieve 3D-ervaringen, simulaties en visualisaties voor verschillende platformen."
-        },
-        {
-          "@type": "Service",
-          "name": "Unity VR Experience Ontwikkeling",
-          "description": "Virtual reality applicaties voor training, entertainment of presentaties."
-        }
+        { "@type": "Service", "name": "Website Ontwikkeling" },
+        { "@type": "Service", "name": "Unity 2D App/Game Ontwikkeling" },
+        { "@type": "Service", "name": "Unity 3D Project Ontwikkeling" },
+        { "@type": "Service", "name": "Unity VR Experience Ontwikkeling" }
       ]
     }
   </script>
@@ -75,12 +89,19 @@
 <script src="js/app.js" defer></script>
 
 <body>
+<div class="balatro-bg"></div>
+<div class="crt-overlay"></div>
+
 <header class="site-header">
   <div class="container header-inner">
     <div class="logo">FK<span>Innovations</span></div>
     <nav class="main-nav">
       <a href="#services">Diensten</a>
-      <a href="#process">Werkwijze</a> <a href="#work">Portfolio</a>   <a href="#unity">Unity</a>
+      <a href="#process">Werkwijze</a>
+      <a href="#work">Portfolio</a>
+      <a href="#unity" class="nav-item-icon">
+        <img src="img/unity3d-icon.svg" alt="Unity Logo" class="nav-icon"> Unity
+      </a>
       <a href="#contact" class="btn btn-small">Offerte aanvragen</a>
     </nav>
   </div>
@@ -90,7 +111,7 @@
   <section class="hero" id="top">
     <div class="container hero-inner">
       <div class="hero-copy">
-        <h1>Websites & Unity Apps<br>laten maken?</h1>
+        <h1>Websites & <img src="img/unity3d-icon.svg" class="text-icon" alt=""> Unity Apps<br>laten maken?</h1>
         <h2 class="hero-subtitle">Ik ben jouw freelance partner voor maatwerk websites en interactieve 3D ervaringen. Moderne technologie zonder de bureau-prijzen.</h2>
         <div class="hero-cta">
           <a href="#contact" class="btn btn-primary">Start je project</a>
@@ -103,13 +124,19 @@
         </ul>
       </div>
       <div class="hero-side">
-        <div class="hero-card">
-          <p class="hero-card-title">Jouw idee, mijn code.</p>
-          <p class="hero-card-text">Of het nu een strakke bedrijfswebsite is of een complexe VR-training, ik regel de technische realisatie.</p>
-          <ul class="hero-card-steps">
-            <li><span>1.</span> Kennismaken</li>
-            <li><span>2.</span> Ontwikkelen</li>
-            <li><span>3.</span> Livegang</li>
+        <div class="hero-card terminal-card">
+          <p class="hero-card-title code-font">
+            <span class="prompt">&gt;</span> Start_Project.exe
+          </p>
+
+          <p class="hero-card-text">
+            Geen zwart gat waar je idee in verdwijnt. Transparante code, heldere logica en een resultaat dat werkt.
+          </p>
+
+          <ul class="hero-card-steps code-font">
+            <li><span class="step-num step-1">[1]</span> <span>init(jouw_idee);</span></li>
+            <li><span class="step-num step-2">[2]</span> <span>build(oplossing);</span></li>
+            <li><span class="step-num step-3">[3]</span> <span>deploy(succes);</span></li>
           </ul>
         </div>
       </div>
@@ -132,6 +159,12 @@
             <li>Razendsnelle laadtijden</li>
           </ul>
         </article>
+        <article class="card">
+        <h3>Web & E-commerce</h3> <p>Van snelle landingspagina's tot complete webshops. Ik bouw nieuw of help je met bestaande systemen.</p>
+        <ul>
+          <li>Maatwerk Websites</li>
+          <li>Shopify & WordPress setup</li> <li>Reparatie van bestaande code</li> </ul>
+      </article>
         <article class="card">
           <h3>Professionele Identiteit</h3>
           <p>Een complete bedrijfswebsite die vertrouwen uitstraalt. Ideaal voor het MKB en freelancers die een stap verder willen.</p>
@@ -185,17 +218,14 @@
       </header>
       <div class="layouts-grid">
         <a href="layouts/business.html" class="layout-box">
-          <img src="img/layout-business.jpg" alt="Zakelijke website layout template" loading="lazy">
           <h3>De 'Corporate' Look</h3>
           <p>Betrouwbaar, strak en overzichtelijk. Perfect voor diensten.</p>
         </a>
         <a href="layouts/portfolio.html" class="layout-box">
-          <img src="img/layout-portfolio.jpg" alt="Creatieve portfolio layout template" loading="lazy">
           <h3>De 'Creative' Look</h3>
           <p>Visueel ingesteld met veel ruimte voor afbeeldingen en werk.</p>
         </a>
         <a href="layouts/onepage.html" class="layout-box">
-          <img src="img/layout-onepage.jpg" alt="Minimalistische one-page website template" loading="lazy">
           <h3>De 'Minimalist' Look</h3>
           <p>Alles op één pagina. Modern, snel en to-the-point.</p>
         </a>
@@ -206,11 +236,11 @@
   <section id="unity" class="section">
     <div class="container">
       <header class="section-header">
-        <h2>Unity Development</h2>
-        <p>Als gecertificeerd Unity ontwikkelaar bouw ik meer dan alleen websites.</p>
-      </header>
+      <h2><img src="img/unity3d-icon.svg" class="text-icon" alt=""> Unity Development</h2>
+      <p>Als ervaren Unity ontwikkelaar bouw ik meer dan alleen websites.</p>
+    </header>
       <div class="cards-grid">
-        <article class="card">
+        <article class="card card-unity">
           <h3>Serious Games & Apps</h3>
           <p>Educatieve applicaties of gamified marketing tools die werken op zowel mobiel (iOS/Android) als desktop.</p>
           <ul>
@@ -219,7 +249,7 @@
             <li>App Store begeleiding</li>
           </ul>
         </article>
-        <article class="card">
+        <article class="card card-unity">
           <h3>3D Visualisaties</h3>
           <p>Interactieve productdemo's of vastgoed walkthroughs. Laat klanten je product ervaren voordat ze kopen.</p>
           <ul>
@@ -228,7 +258,7 @@
             <li>WebGL (draait in browser)</li>
           </ul>
         </article>
-        <article class="card">
+        <article class="card card-unity">
           <h3>Virtual Reality (VR)</h3>
           <p>Dompel je gebruikers onder in een andere wereld. Ideaal voor veilige trainingen of indrukwekkende presentaties.</p>
           <ul>
@@ -245,26 +275,38 @@
     <div class="container">
       <header class="section-header">
         <h2>Veelgestelde Vragen</h2>
+        <p>Duidelijkheid vooraf, zodat we allebei weten waar we aan toe zijn.</p>
       </header>
       <div class="faq-list">
+
         <article itemscope itemprop="mainEntity" itemtype="https://schema.org/Question">
-          <h3 itemprop="name">Wat kost een website laten maken?</h3>
+          <h3 itemprop="name">Maak je ook de 3D-modellen en graphics voor mijn game?</h3>
           <div itemscope itemprop="acceptedAnswer" itemtype="https://schema.org/Answer">
-            <p itemprop="text">Dit hangt af van je wensen. Een simpele 'one-page' site is voordeliger dan een complexe webshop of Unity game. Neem contact op voor een prijsindicatie.</p>
+            <p itemprop="text">Mijn focus ligt op de <strong>technische ontwikkeling</strong> (de code en functionaliteit). Voor Unity-projecten verwacht ik dat jij de visuele assets (zoals 3D-modellen, sprites, UI en geluid) aanlevert. Heb je die niet? Dan kan ik je wel in contact brengen met getalenteerde designers.</p>
           </div>
         </article>
+
         <article itemscope itemprop="mainEntity" itemtype="https://schema.org/Question">
-          <h3 itemprop="name">Doe je ook onderhoud en updates?</h3>
+          <h3 itemprop="name">Regel jij de hosting van de website?</h3>
           <div itemscope itemprop="acceptedAnswer" itemtype="https://schema.org/Answer">
-            <p itemprop="text">Zeker. Na livegang laat ik je niet zwemmen. We kunnen afspraken maken over periodiek onderhoud of updates.</p>
+            <p itemprop="text">Ik host zelf geen websites. Ik vind het belangrijk dat <strong>jij eigenaar blijft</strong> van je eigen data en domeinnaam. Ik adviseer je wel over de beste (en voordeligste) provider voor jouw project en ik regel de volledige technische installatie voor je.</p>
           </div>
         </article>
+
         <article itemscope itemprop="mainEntity" itemtype="https://schema.org/Question">
-          <h3 itemprop="name">Werk je voor klanten door heel Nederland?</h3>
+          <h3 itemprop="name">Help je ook met Shopify, WordPress of bestaande code?</h3>
           <div itemscope itemprop="acceptedAnswer" itemtype="https://schema.org/Answer">
-            <p itemprop="text">Ja, omdat we digitaal werken kan ik klanten uit heel Nederland en België bedienen, van Amsterdam tot Brussel.</p>
+            <p itemprop="text">Zeker. Naast maatwerk kan ik je helpen met het professioneel opzetten van een <strong>Shopify</strong> winkel of <strong>WordPress</strong> site. Heb je al een project liggen waar fouten in zitten of dat updates nodig heeft? Ik duik graag in bestaande code om het weer werkend te krijgen.</p>
           </div>
         </article>
+
+        <article itemscope itemprop="mainEntity" itemtype="https://schema.org/Question">
+          <h3 itemprop="name">Wat kost een project ongeveer?</h3>
+          <div itemscope itemprop="acceptedAnswer" itemtype="https://schema.org/Answer">
+            <p itemprop="text">Dat hangt af van de omvang. Een 'fix' aan een bestaande site of een simpele setup is voordeliger dan een complete Unity 3D-applicatie. Neem contact op voor een vrijblijvende prijsindicatie.</p>
+          </div>
+        </article>
+
       </div>
     </div>
   </section>
